--- a/portfolio.html
+++ b/portfolio.html
@@ -33,16 +33,16 @@
             </li>
           </ul>
         </nav>
-        <div class="section-address">
-          <address class="address-portfolio">
-            <a class="header-portfolio-mail-link link" href="mailto:info@devstudio.com">
+        <div class="address-studio">
+          <address class="address">
+            <a class="header-mail-link link" href="mailto:info@devstudio.com">
               <svg class="mail-svg" width="16px" height="12px">
                 <use href="./img/sprite.svg#icon-hover"></use>
               </svg>
               info@devstudio.com</a>
           </address>
-          <address class="address-portfolio">
-            <a class="header-portfolio-tel-link link" href="tel:+380961111111">
+          <address class="address">
+            <a class="header-tel-link link" href="tel:+380961111111">
               <svg class="tel-svg" width="10px" height="16px">
                 <use href="./img/sprite.svg#icon-Vector"></use>
               </svg>
