--- a/portfolio.html
+++ b/portfolio.html
@@ -107,7 +107,7 @@
           </div>
           <div class="croup">
               <img class="section-img" src="./img/project5.jpg" alt="бокс" width="370" height="294"/>
-              <div cllass="project-item">
+              <div class="project-item">
                 <h2 class="project-title">Проект Boxes</h2>
                 <p class="project-subtitle">Приложение</p>
               </div>
